azure-npm/deny-all-inbound.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-inbound
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
